--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
             <div class="container1">
                 <div class="topics-section">
                     <div class="topic-box">
-                        <h4>Cities and Villages</h4>
+                        <h4>Cities / Villages and Environment</h4>
                         <ul>
                             <li>Sustainable Urban Planning</li>
                             <li>Green Infrastructure</li>
