--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <span data-animation="fadeInLeft" data-delay=".1s">JNTUGV Innovation & Incubation Center Presents</span>
                                 <h1 data-animation="fadeInLeft" data-delay=".5s">IDEAVERSE 1.0</h1>
                                 <div class="slider-btns">
-                                    <span data-animation="fadeInLeft" data-delay=".1s">AN Innovation AND ACQUISITION SUMMIT</span>
+                                    <span data-animation="fadeInLeft" data-delay=".1s">AN Innovation AND ideation context</span>
 
                                     <p class="video-cap d-none d-sm-blcok" data-animation="fadeInRight" data-delay="1.0s">Story Vidoe<br> Watch</p>
                                 </div>
