--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                                         <li><a href="#home">Home</a></li>
                                         <li><a href="#about">About</a></li>
                                         <li><a href="#obj">Objectives</a></li>
+                                        <li><a href="teams.html">Teams</a></li>
                                         <li><a href="#event">Event info</a></li>
                                         <li><a href="#topics">Topics</a></li>
 
@@ -144,9 +145,10 @@
                     <div class="about-caption mb-50">
                         <div class="section-tittle mb-35">
                             <h2>IDEAVERSE 1.0</h2>
+                            <p>Ignite Innovation, Reshape the Future: Spark Ideas, Challenge Norms, Transform the World</p>
+
                         </div>
                         <p>IDEAVERSE 1.0," an innovation and ideation context organized by the JNTUGV Innovation & Incubation Centre in Association with the ACM Student Chapter (JNTUGV CEV(A)).</p>
-                        <p>Ignite Innovation, Reshape the Future: Spark Ideas, Challenge Norms, Transform the World</p>
                         <p><strong>Objective:</strong> A full day dedicated to innovation, inspiration, and learning, featuring the latest trends and innovations in technology.</p>
                         <p>Learn more about what drives us forward and our key goals for success.</p>
                     </p>
@@ -614,7 +616,7 @@
             </div>
             <div class="timeline-item left">
                 <h4>Phase 3</h4>
-                <p>Final Pitchfest</p>
+                <p>Final Ideaverse</p>
             </div>
         </div>
     
