--- a/teams.html
+++ b/teams.html
@@ -91,10 +91,10 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1>Our Team</h1>
+        <h1>Advisiory Board</h1>
 
         <div class="team-section">
-            <h2>Organizing Team</h2>
+           
             <div class="row">
                 <div class="col-md-5 col-lg-3">
                     <div class="card text-center shadow-sm">
