--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                         <li><a href="#home">Home</a></li>
                                         <li><a href="#about">About</a></li>
                                         <li><a href="#obj">Objectives</a></li>
-                                        <li><a href="teams.html">Teams</a></li>
+                                        <li><a href="teams.html">Adivisory Board</a></li>
                                         <li><a href="#event">Event info</a></li>
                                         <li><a href="#topics">Topics</a></li>
 
