--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             <p>Ignite Innovation, Reshape the Future: Spark Ideas, Challenge Norms, Transform the World</p>
 
                         </div>
-                        <p>IDEAVERSE 1.0," an innovation and ideation context organized by the JNTUGV Innovation & Incubation Centre in Association with the ACM Student Chapter (JNTUGV CEV(A)).</p>
+                        <p>IDEAVERSE 1.0," an innovation and ideation context organized by the JNTUGV Innovation & Incubation Centre in Association with the ACM Student Chapter (JNTU-GV CEV(A)).</p>
                         <p><strong>Objective:</strong> A full day dedicated to innovation, inspiration, and learning, featuring the latest trends and innovations in technology.</p>
                         <p>Learn more about what drives us forward and our key goals for success.</p>
                     </p>
@@ -708,7 +708,7 @@
                              <div class="footer-tittle">
                                  <h4>About Us</h4>
                                  <div class="footer-pera">
-                                     <p>IDEAVERSE 1.0," an innovation and ideation context organized by the JNTUGV Innovation & Incubation Centre in Association with the ACM Student Chapter (JNTUGV CEV(A)).</p>
+                                     <p>IDEAVERSE 1.0," an innovation and ideation context organized by the JNTUGV Innovation & Incubation Centre in Association with the ACM Student Chapter (JNTU-GV CEV(A)).</p>
                                 </div>
                              </div>
                          </div>
